[metadata]
name = calatrava
version = attr: calatrava.__version__
author = L. F. Pereira
author_email = luisfgpereira95@gmail.com
description = A Python code architecture analyzer 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lpereira95/calatrava
project_urls =
	Bug Tracker = https://github.com/lpereira95/calatrava/issues
classifiers =
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
	License :: OSI Approved :: MIT License

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.7
install_requires =
    click
    findimports
    xlizard @ git+https://github.com/lpereira95/xlizard.git


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    calatrava = calatrava._cli:main_cli